--- a/quartz/src/main/resources/application.properties
+++ b/quartz/src/main/resources/application.properties
@@ -6,10 +6,12 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 logging.config=classpath:logback-spring.xml
 
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.dynamic.master.username=root
+spring.datasource.dynamic.master.password=123456
+spring.datasource.dynamic.master.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.dynamic.master.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-
+spring.datasource.dynamic.slave_1.username=root
+spring.datasource.dynamic.slave_1.password=123456
+spring.datasource.dynamic.slave_1.url=jdbc:mysql://localhost:3306/icp?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.dynamic.slave_1.driver-class-name=com.mysql.cj.jdbc.Driver
