--- a/quartz/src/main/resources/application.properties
+++ b/quartz/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.datasource.dynamic.slave_1.username=root
 spring.datasource.dynamic.slave_1.password=123456
 spring.datasource.dynamic.slave_1.url=jdbc:mysql://localhost:3306/icp?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.dynamic.slave_1.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.redis.database=0
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.max-wait=-1
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.timeout=10000
+spring.redis.cluster.nodes=127.0.0.1:9001,127.0.0.1:9002,127.0.0.1:9003,127.0.0.1:9004,127.0.0.1:9005,127.0.0.1:9006
