--- a/common/pom.xml
+++ b/common/pom.xml
@@ -89,8 +89,12 @@
             <version>2.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.72</version>
+        </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
