--- a/msgpush/pom.xml
+++ b/msgpush/pom.xml
@@ -3,10 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>quartz</artifactId>
+    <artifactId>msgpush</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>quartz</name>
-    <description>Demo project for Spring Boot</description>
+    <name>msgpush</name>
+    <description>推送服务</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -16,26 +16,18 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-websocket</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.aliyun</groupId>
-                    <artifactId>aliyun-java-sdk-core</artifactId>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-pool2</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
-
-
     </dependencies>
-
 
     <build>
         <plugins>
