--- a/msgpush/pom.xml
+++ b/msgpush/pom.xml
@@ -27,6 +27,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.3.0.RELEASE</version>
+        </dependency>
+
+        <!--netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.50.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
