--- a/msgpush/src/main/resources/application.properties
+++ b/msgpush/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 logging.config=classpath:logback-spring.xml
 
+server.netty.port=5000
+
 spring.datasource.dynamic.master.username=root
 spring.datasource.dynamic.master.password=123456
 spring.datasource.dynamic.master.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
