初始化配置权限

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,6 +16,12 @@
     </properties>
 
     <dependencies>
+        <!--图片服务器-->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>7.1.0</version>
+        </dependency>
         <!--日志-->
         <dependency>
             <groupId>org.slf4j</groupId>
