--- a/msgpush/src/main/resources/application.properties
+++ b/msgpush/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.datasource.dynamic.slave_1.password=123456
 spring.datasource.dynamic.slave_1.url=jdbc:mysql://localhost:3306/icp?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.dynamic.slave_1.driver-class-name=com.mysql.cj.jdbc.Driver
 
-aliyun.sms.accessKeyId=LTAI4GJjkYc1cCt5PrzYq9eH
-aliyun.sms.accessKeySecret=ChLsuvQARLrROoNRuuolLbs410ruRG
-aliyun.sms.templateCode=SMS_198665274
-aliyun.sms.signName=ABC商城
+aliyun.sms.accessKeyId=xxxxx
+aliyun.sms.accessKeySecret=xxxx
+aliyun.sms.templateCode=xxx
+aliyun.sms.signName=xxxx
 aliyun.sms.regionName=cn-hangzhou
