添加动态查询字段功能

--- a/graphql/src/main/resources/application.properties
+++ b/graphql/src/main/resources/application.properties
@@ -1,18 +1,13 @@
-spring.application.name=graphql
+server.port=9006
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+spring.datasource.dynamic.master.username=root
+spring.datasource.dynamic.master.password=123456
+spring.datasource.dynamic.master.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.dynamic.master.driver-class-name=com.mysql.cj.jdbc.Driver
 
-management.endpoints.jmx.exposure.include=*
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
-
-
-# spring cloud access&secret config
-# 可以访问如下地址查看: https://usercenter.console.aliyun.com/#/manage/ak
-alibaba.cloud.access-key=****
-alibaba.cloud.secret-key=****
-
-# 应用服务 WEB 访问端口
-server.port=8080
-# Actuator Web 访问端口
-management.server.port=8081
-
+spring.datasource.dynamic.slave_1.username=root
+spring.datasource.dynamic.slave_1.password=123456
+spring.datasource.dynamic.slave_1.url=jdbc:mysql://localhost:3306/icp?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.dynamic.slave_1.driver-class-name=com.mysql.cj.jdbc.Driver
 
