--- a/common/pom.xml
+++ b/common/pom.xml
@@ -78,6 +78,13 @@
             <version>3.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+
+
         <!--springaop 手动切换数据源-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
